# destruct

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  cloud.frag  cloud.vert  diffuse.vert  resource.cmake
assets/: fake_gregolan_jr.blend  fake_gregolan_jr.blend1  gregolan.blend  gregolan.blend1  gregolan_jr.blend  gregolan_jr.blend1  uv_test.blend
client/: CMakeLists.txt  Camera.cpp  Camera.h  Display.cpp  Display.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Obj.cpp  Render.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  main.c  main.cpp  r_renderer.cpp  r_renderer.h  r_shared.h  r_state.cpp  r_state.h  r_window.c  r_window.cpp  r_window.h  state.cpp  state.h
server/: CMakeLists.txt
shared/: CMakeLists.txt  Entity.cpp  Entity.h  PhysManager.cpp  PhysManager.h  PlayerEntity.h  Scene.cpp  Scene.h  Util.cpp  Util.h  WorldSpawnEntity.h  sh_phys.cpp  sh_phys.h  sh_reader.cpp  sh_reader.h  sh_scene.c  sh_scene.cpp  sh_scene.h  sh_xmlreader.cpp  sh_xmlreader.h  shared.h
